css/index.css
/* Use Roboto and suitable font size*/

body {
    text-align: center;
    overflow: hidden;
}


/* Ensure the comic image resizes correctly. */

#comic {
    max-height: 450px;
    max-width: 740px;
    -webkit-transition: opacity 0.1s ease-out;
    transition: opacity 0.1s ease-out;
}

#comicContainer {
    background: white;
    width: 750px;
    height: 500px;
    margin: auto;
}

#comicContainer .mdl-grid {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    position: relative;
}

#comicTitle {
    font-size: 25px;
    position: relative;
    top: 11px;
}

#comicNumber {
    font-size: 16px;
    font-weight: 300;
    margin-bottom: 0;
    margin-top: 0;
    height: 40px;
}

#image {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 450px;
}

.img-align {
    margin-left: auto;
    margin-right: auto;
}

.mdl-textfield {
    position: relative;
    bottom: 10px;
}

.mdl-spinner {
    position: absolute !important;
    top: 50%;
}

button.mdl-button {
    height: 45px;
    width: 45px;
}

.navigation img {
    height: 14px;
    width: 14px;
    position: relative;
    bottom: 3px;
    left: 3px;
}

.navigation .nav {
    font-size: 32px;
}


/* Align the search bar with the other buttons. */

#search {
    position: relative;
    top: -10px;
}

#historyMenu {
    padding: 0;
}

#expand {
    position: fixed;
    /*top: 7px;
    right: 100px;*/
    opacity: 0;
}

#image::-webkit-scrollbar {
    width: 8px;
}

#image::-webkit-scrollbar-button {
    width: 8px;
    height: 5px;
}

#image::-webkit-scrollbar-track {
    background: #eee;
    border: thin solid lightgray;
    box-shadow: 0 0 3px #dfdfdf inset;
    border-radius: 10px;
}

#image::-webkit-scrollbar-thumb {
    background: #999;
    border: thin solid gray;
    border-radius: 10px;
}

#image::-webkit-scrollbar-thumb:hover {
    background: #7d7d7d;
}


/* Poorly drawn duck icon. */

.logo {
    position: absolute;
    bottom: -20px;
    left: -26px;
}

@-webkit-keyframes spin {
    from {
        -webkit-transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(-180deg);
    }
}

@-webkit-keyframes spinBack {
    from {
        -webkit-transform: rotate(-180deg);
    }
    to {
        -webkit-transform: rotate(-360deg);
    }
}

@-webkit-keyframes fullSpin {
    from {
        -webkit-transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(-360deg);
    }
}

@-webkit-keyframes fullSpin2 {
    from {
        -webkit-transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(-360deg);
    }
}

@-webkit-keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

